--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   outline: none;
   box-sizing: border-box;
   list-style: none;
-  text-decoration: none;  
+  text-decoration: none;
 }
 
 html {
@@ -26,6 +26,11 @@ html {
   flex-direction: column;
   justify-content: space-evenly;
   cursor: pointer;
+  transition: right 0.7s;
+}
+
+.change .hamburger-menu {
+  right: 33rem;
 }
 
 .line {
@@ -33,11 +38,64 @@ html {
   height: 0.2rem;
   background-color: #fff;
   box-shadow: 0 0.1rem 0.2rem rgba(0, 0, 0, 0.2);
+  transition: all 0.5s;
+}
+
+.change .line {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.change .line-1 {
+  transform: rotate(45deg) translate(0.3rem, 0.8rem);
+}
+
+.change .line-2 {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.change .line-3 {
+  transform: rotate(-45deg) translate(0.3rem, -0.8rem);
+}
+
+.hamburger-menu span {
+  position: absolute;
+  left: 5rem;
+  width: 10rem;
+  height: 4rem;
+  background-color: #e2b646;  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-family: "Baloo Da 2", serif;
+  font-size: 1.6rem;
+  letter-spacing: 0.1rem;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.2s;
+}
+
+.change .hamburger-menu:hover span {
+  opacity: 1;
+  visibility: visible;  
+}
+
+.hamburger-menu span::before {
+  content: "";
+  position: absolute;
+  border-left: 1rem solid transparent;
+  border-right: 1rem solid #e2b646;
+  border-bottom: 1rem solid transparent; 
+  border-top: 1rem solid transparent; 
+  top: 50%;
+  left: -2rem;
+  transform: translateY(-50%);
 }
 
 .header {
   width: 100%;
-  height: 100vh;  
+  height: 100vh;
   position: relative;
   perspective: 100rem;
   overflow: hidden;
@@ -46,15 +104,15 @@ html {
 .img-wrapper {
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);  
+  background-color: rgba(0, 0, 0, 0.8);
   overflow: hidden;
 }
 
 .img-wrapper img {
   width: 100%;
   height: 100%;
-  object-fit: cover; 
-  opacity: 0.5; 
+  object-fit: cover;
+  opacity: 0.5;
   animation: scale 25s;
 }
 
@@ -69,7 +127,7 @@ html {
 }
 
 .banner {
-  position: absolute;  
+  position: absolute;
   top: 30%;
   left: 15%;
   transform-style: preserve-3d;
@@ -83,7 +141,7 @@ html {
   width: 50%;
   line-height: 9rem;
   letter-spacing: 0.2rem;
-  text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);  
+  text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
   opacity: 0;
   animation: move-banner 1s 0.5s forwards;
 }
@@ -95,15 +153,15 @@ html {
   width: 70%;
   letter-spacing: 0.1rem;
   margin-bottom: 3rem;
-  text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4); 
-  opacity: 0; 
+  text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.4);
+  opacity: 0;
   animation: move-banner 1s 0.7s forwards;
 }
 
 .banner button {
   width: 25rem;
   height: 7rem;
-  background-color: #c29525;  
+  background-color: #c29525;
   border: none;
   font-family: "Muli", serif;
   font-size: 2rem;
@@ -127,3 +185,79 @@ html {
   }
 }
 /* End of header */
+
+/* Sidebar */
+.sidebar {
+  width: 40rem;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: -40rem;
+  background-color: #fff;
+  transition: right 0.5s;
+}
+
+.change .sidebar {
+  right: 0;
+}
+
+.menu {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.menu-item {
+  text-align: center;
+}
+
+.menu-link {
+  font-family: "Baloo Da 2", serif;
+  font-size: 4rem;
+  color: #555;
+  position: relative;
+}
+
+.menu-link::before {
+  content: attr(data-content);
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #c29525;
+  width: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  transition: width 0.3s ease-in-out;
+}
+
+.menu-link:hover::before {
+  width: 100%;
+}
+
+.social-media {
+  position: absolute;
+  bottom: 3rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.social-media i {
+  font-size: 2.2rem;
+  margin: 3rem;
+  width: 4.5rem;
+  height: 4.5rem;
+  background-color: #777;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  transition: background-color 0.3s;
+}
+
+.social-media i:hover {
+  background-color: #c29525;
+}
+/* End of sidebar */
