Implemented scroll button

--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
 
 html {
   font-size: 62.5%;
-  scroll-behavior: smooth;
 }
 /* End of reset and common styles */
 
@@ -622,3 +621,21 @@ html {
   color: #a7a7a7;  
 }
 /* End of footer */
+
+/* Scroll button */
+.scroll-btn {
+  position: fixed;  
+  right: 5rem;
+  bottom: 5rem;
+  width: 4.5rem;
+  height: 4.5rem;
+  background-color: #e2b646;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  color: #fff;
+  box-shadow: 0 0.1rem 0.6rem rgba(0, 0, 0, 0.2);
+  border-radius: 0.3rem;
+}
+/* End of scroll button */
