--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ html {
   left: 5rem;
   width: 10rem;
   height: 4rem;
-  background-color: #e2b646;  
+  background-color: #e2b646;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -77,7 +77,7 @@ html {
 
 .change .hamburger-menu:hover span {
   opacity: 1;
-  visibility: visible;  
+  visibility: visible;
 }
 
 .hamburger-menu span::before {
@@ -85,8 +85,8 @@ html {
   position: absolute;
   border-left: 1rem solid transparent;
   border-right: 1rem solid #e2b646;
-  border-bottom: 1rem solid transparent; 
-  border-top: 1rem solid transparent; 
+  border-bottom: 1rem solid transparent;
+  border-top: 1rem solid transparent;
   top: 50%;
   left: -2rem;
   transform: translateY(-50%);
@@ -266,14 +266,14 @@ html {
 .about-us {
   width: 100%;
   background-color: #f5f5f5;
-  padding-bottom: 15rem;  
+  padding-bottom: 15rem;
 }
 
 .section-header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 7rem 0 10rem 0;  
+  padding: 7rem 0 10rem 0;
 }
 
 .section-heading {
@@ -281,13 +281,13 @@ html {
   font-size: 5rem;
   font-weight: 300;
   color: #4b4b4b;
-  margin-bottom: 6rem;  
+  margin-bottom: 6rem;
 }
 
 .underline {
   width: 12rem;
   height: 0.3rem;
-  background-color: #c29525;  
+  background-color: #c29525;
 }
 
 .services {
@@ -296,54 +296,54 @@ html {
   display: grid;
   grid-template-columns: repeat(16, 1fr);
   grid-template-rows: repeat(6, 6rem);
-  row-gap: 4rem;  
+  row-gap: 4rem;
 }
 
 .service {
   width: 100%;
-  margin-bottom: 2rem;  
+  margin-bottom: 2rem;
 }
 
 .service:nth-child(1) {
   grid-column: 4 / 7;
-  grid-row: 1 / 3;  
+  grid-row: 1 / 3;
 }
 
 .service:nth-child(2) {
   grid-column: 3 / 6;
-  grid-row: 3 / 5;  
+  grid-row: 3 / 5;
 }
 
 .service:nth-child(3) {
   grid-column: 4 / 7;
-  grid-row: 5 / -1;  
+  grid-row: 5 / -1;
 }
 
 .service:nth-child(4) {
   grid-column: 11 / 14;
-  grid-row: 1 / 3;  
+  grid-row: 1 / 3;
 }
 
 .service:nth-child(5) {
   grid-column: 12 / 15;
-  grid-row: 3 / 5;  
+  grid-row: 3 / 5;
 }
 
 .service:nth-child(6) {
   grid-column: 11 / 14;
-  grid-row: 5 / -1;  
+  grid-row: 5 / -1;
 }
 
 .service-header {
   display: flex;
   align-items: center;
-  margin-bottom: 1rem;  
+  margin-bottom: 1rem;
 }
 
 .service-header i {
   font-size: 4rem;
   color: #4b4b4b;
-  margin-right: 2rem;  
+  margin-right: 2rem;
 }
 
 .service-header h3 {
@@ -351,26 +351,26 @@ html {
   font-size: 2.6rem;
   line-height: 2.6rem;
   font-weight: 400;
-  margin-bottom: 2rem;  
+  margin-bottom: 2rem;
 }
 
 .service-text {
   font-family: "Josefin Slab", serif;
   font-size: 1.6rem;
   font-weight: 600;
-  text-align: justify;  
+  text-align: justify;
 }
 
 .about-us-img-wrapper {
   grid-column: 7 / 11;
-  grid-row: 2 / 6;  
+  grid-row: 2 / 6;
   width: 100%;
 }
 
 .about-us-img-wrapper img {
   width: 100%;
   object-fit: cover;
-  opacity: 0.8;  
+  opacity: 0.8;
 }
 /* End of About Us section */
 
@@ -380,19 +380,19 @@ html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0 5rem 20rem 5rem;  
+  padding: 0 5rem 20rem 5rem;
 }
 
 .cards-wrapper {
   display: flex;
   justify-content: space-evenly;
-  margin-top: 8rem;  
+  margin-top: 8rem;
   width: 100%;
 }
 
 .card {
   width: 37rem;
-  height: 45rem;  
+  height: 45rem;
   box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.4);
   border-radius: 0.5rem;
   position: relative;
@@ -400,7 +400,7 @@ html {
 
 .card-img-wrapper {
   width: 100%;
-  height: 100%;  
+  height: 100%;
   background-color: #262626;
   border-radius: 0.5rem;
 }
@@ -408,14 +408,14 @@ html {
 .card-img-wrapper img {
   width: 100%;
   height: 100%;
-  object-fit: cover;  
+  object-fit: cover;
   opacity: 0.8;
   border-radius: 0.5rem;
   transition: opacity 0.3s;
 }
 
 .card:hover .card-img-wrapper img {
-  opacity: 0.5;  
+  opacity: 0.5;
 }
 
 .card-info {
@@ -431,7 +431,7 @@ html {
 .card:hover .card-info {
   bottom: 2rem;
   opacity: 1;
-  visibility: visible;  
+  visibility: visible;
 }
 
 .card-info h2 {
@@ -439,11 +439,11 @@ html {
   font-size: 2.5rem;
   line-height: 2.5rem;
   font-weight: 300;
-  color: #eee;  
+  color: #eee;
 }
 
 .card-info h3 {
-  font-family: "Muli", serif;  
+  font-family: "Muli", serif;
   font-size: 2rem;
   font-weight: 500;
   color: #a52a2a;
@@ -457,7 +457,7 @@ html {
   font-weight: 300;
   color: #eee;
   width: 80%;
-  margin-bottom: 2rem;  
+  margin-bottom: 2rem;
 }
 
 .card-info button {
@@ -470,7 +470,7 @@ html {
   line-height: 1.5rem;
   color: #eee;
   border-radius: 0.3rem;
-  box-shadow: 0 0.1rem 0.8rem rgba(0, 0, 0, 0.4);  
+  box-shadow: 0 0.1rem 0.8rem rgba(0, 0, 0, 0.4);
 }
 /* End of team section */
 
@@ -481,26 +481,27 @@ html {
   background-color: #272727;
   display: flex;
   justify-content: center;
-  align-items: center;  
+  align-items: center;
 }
 
 .contact-wrapper {
   width: 60%;
-  height: 75rem;
+  height: 60rem;
   display: flex;
-  box-shadow: 0 3rem 7rem rgba(0, 0, 0, 0.5);  
+  box-shadow: 0 3rem 7rem rgba(0, 0, 0, 0.5);
 }
 
 .contact-left {
   width: 35%;
-  background: linear-gradient(rgba(15, 15, 15, 0.6), rgba(22, 22, 22, 0.9)), url(images/contact-bg.jpg) center no-repeat;
+  background: linear-gradient(rgba(15, 15, 15, 0.6), rgba(22, 22, 22, 0.9)),
+    url(images/contact-bg.jpg) center no-repeat;
   background-size: cover;
 }
 
 .contact-right {
   width: 65%;
   background-color: #eee;
-  padding: 3rem 10rem 10rem 10rem;  
+  padding: 3rem 10rem 10rem 10rem;
 }
 
 .contact-heading {
@@ -509,18 +510,18 @@ html {
   font-weight: 300;
   color: #272727;
   margin-bottom: 5rem;
-  text-align: center;  
+  text-align: center;
 }
 
 .contact-right form {
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;  
+  align-items: center;
 }
 
 .input-group {
-  position: relative;  
+  position: relative;
 }
 
 .field {
@@ -532,20 +533,20 @@ html {
   padding: 1rem 1rem 1rem 0;
   font-family: "Muli", serif;
   font-size: 1.6rem;
-  color: #4b4b4b;  
+  color: #4b4b4b;
 }
 
 .input-group input {
-  height: 4rem;  
+  height: 4rem;
 }
 
 .input-group textarea {
   max-height: 7rem;
-  max-width: 45rem;  
+  max-width: 45rem;
 }
 
 .field:focus {
-  border-bottom-style: solid;  
+  border-bottom-style: solid;
 }
 
 .input-group label {
@@ -560,16 +561,16 @@ html {
 }
 
 .input-label {
-  bottom: 3rem;  
+  bottom: 3rem;
 }
 
 .message {
-  bottom: 6rem;  
+  bottom: 6rem;
 }
 
 .field:focus ~ label {
   transform: translateY(-3rem);
-  font-size: 1.2rem;  
+  font-size: 1.2rem;
 }
 
 .submit-btn {
@@ -585,8 +586,8 @@ html {
   text-transform: uppercase;
   letter-spacing: 0.2rem;
   cursor: pointer;
-  text-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);  
-  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.3); 
+  text-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.3);
 }
 /* End of contact section */
 
@@ -597,11 +598,11 @@ html {
   background-color: #17181b;
   display: flex;
   justify-content: center;
-  align-items: center;  
+  align-items: center;
 }
 
 .footer-content {
-  width: 60%;  
+  width: 60%;
   display: flex;
   justify-content: space-between;
 }
@@ -609,7 +610,7 @@ html {
 .copyright {
   font-family: "Baloo Da 2", serif;
   font-size: 1.6rem;
-  color: #a7a7a7;  
+  color: #a7a7a7;
 }
 
 .social-list a {
@@ -618,13 +619,13 @@ html {
 
 .social-list i {
   font-size: 2rem;
-  color: #a7a7a7;  
+  color: #a7a7a7;
 }
 /* End of footer */
 
 /* Scroll button */
 .scroll-btn {
-  position: fixed;  
+  position: fixed;
   right: 5rem;
   bottom: 5rem;
   width: 4.5rem;
@@ -639,3 +640,211 @@ html {
   border-radius: 0.3rem;
 }
 /* End of scroll button */
+
+/* Responsive */
+@media screen and (max-width: 1500px) {
+  .about-us-img-wrapper {
+    grid-row: 3 / -1;
+  }
+
+  .card {
+    width: 34rem;
+  }
+
+  .contact-wrapper {
+    width: 80%;
+  }
+
+  .footer-content {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .banner h1 {
+    font-size: 6rem;
+    line-height: 7rem;
+  }
+
+  .banner p {
+    font-size: 3rem;
+  }
+
+  .banner button {
+    width: 20rem;
+    height: 5rem;
+    font-size: 1.6rem;
+  }
+
+  .menu-link {
+    font-size: 3rem;
+  }
+
+  .service:nth-child(1) {
+    grid-column: 3 / 7;
+  }
+
+  .service:nth-child(2) {
+    grid-column: 2 / 6;
+  }
+
+  .service:nth-child(3) {
+    grid-column: 3 / 7;
+  }
+
+  .service:nth-child(4) {
+    grid-column: 11 / 15;
+  }
+
+  .service:nth-child(5) {
+    grid-column: 12 / 16;
+  }
+
+  .service:nth-child(6) {
+    grid-column: 11 / 15;
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  .team {
+    padding-bottom: 5rem;
+  }
+
+  .cards-wrapper {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 4rem;
+  }
+
+  .card {
+    margin-bottom: 8rem;
+  }
+
+  .contact-wrapper {
+    width: 90%;
+    height: 55rem;
+  }
+
+  .contact-heading {
+    margin-bottom: 2rem;
+  }
+
+  .field {
+    margin: 2rem 0;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .banner h1 {
+    font-size: 5rem;
+    line-height: 6rem;
+  }
+
+  .banner p {
+    font-size: 2.5rem;
+  }
+
+  .banner button {
+    width: 18rem;
+    height: 4rem;
+    font-size: 1.5rem;
+  }
+
+  .services {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .service {
+    width: 40rem;
+    margin-bottom: 6rem;
+  }
+
+  .about-us-img-wrapper {
+    width: 40rem;
+  }
+
+  .about-us-img-wrapper img {
+    width: 100%;
+  }
+
+  .contact-left {
+    width: 0;
+  }
+
+  .contact-right {
+    width: 100%;
+  }
+
+  .field {
+    width: 55rem;
+  }
+
+  .input-group textarea {
+    max-width: 55rem;
+  }
+
+  .submit-btn {
+    width: 55rem;
+  }
+
+  .footer-content {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 50%;
+  }
+
+  .copyright {
+    order: 1;
+    margin-top: 3rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .banner h1 {
+    font-size: 4rem;
+    line-height: 5rem;
+  }  
+
+  .banner p {
+    font-size: 2rem;
+  }
+
+  .field {
+    width: 35rem;
+  }
+
+  .input-group textarea {
+    max-width: 35rem;
+  }
+
+  .submit-btn {
+    width: 35rem;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  html {
+    font-size: 45%;
+  }
+
+  .sidebar {
+    width: 100%;
+    right: -100%;
+  }
+
+  .change .hamburger-menu {
+    right: 38rem;
+  }
+
+  .service {
+    width: 30rem;
+  }
+
+  .footer {
+    height: 18rem;
+  }
+}
+/* End of responsive */
